Changed submit button color

--- a/src/test.css
+++ b/src/test.css
@@ -266,7 +266,7 @@ a:hover {
 
 form button {
     width: 100%;
-    background-color: rgb(79, 177, 79);
+    background-color: #02bea5;
     color: rgb(255, 255, 255);
     border: none;
     font-family: 'Josefin Sans', sans-serif;
